--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <img class="img-flex gutter pad-b" src="images/headshot-1.jpg" alt="erin headshot">
         </div>
         <div class="gutter unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-            <p>kajkdjkfjkdjkafkjakdjfajkafjkfjkafkaj</p>
+            <p>Hi, I’m Erin Graham and I am a Graphic Designer located in Ottawa, Canada. I am currently in my final year of design school set to graduate April 2016. I have a creative mind, and a genuine love for anything design. My style is strong, clean, and adaptive to take on different projects. I believe that less is more, and I pay close attention to detail. My final site is in process, but feel free to contact me.</p>
         </div>  
     </div>
     
     <footer class="icons grid">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-1 unit-l-1-1">
-                <a href="index.html"><img src="images/linkedin-01.svg"></a>
-                <a href=""><img class="gutter" src="images/behance-01.svg"></a>
-                <a href=""><img src="images/email-01.svg"></a>
+                <a href="https://ca.linkedin.com/pub/erin-graham/75/960/68"><img src="images/linkedin-01.svg"></a>
+                <a href="https://www.behance.net/erin-graham"><img class="gutter" src="images/behance-01.svg"></a>
+                <a href="mailto:erin.graham9@gmail.com"><img src="images/email-01.svg"></a>
             </div>
     </footer>  
 </body>
